# page-table-walker

./: ARM_V9_2STAGE_PTW_GUIDE.md  HOWTO.md  README.md  pyproject.toml
examples/: scenario_a_success.json  scenario_b_translation_fault.json  scenario_c_permission_fault.json  scenario_d_s2_fault.json  scenario_e_block_mapping.json  scenario_simple_success.json
results/: ptw_visualizer.html
src/ptw_viz/: __init__.py  __main__.py  main.py
src/ptw_viz/io/: __init__.py  formatter.py  parser.py
src/ptw_viz/models/: __init__.py  address.py  descriptor.py  granule.py  registers.py
src/ptw_viz/simulator/: __init__.py  faults.py  stage1.py  stage2.py  walker.py
src/ptw_viz/visualizer/: __init__.py  base.py  html.py  terminal.py
src/ptw_viz/visualizer/templates/: interactive.html
