[project]
name = "page-table-walker"
version = "0.1.0"
description = "Page Table Walker with simulation and visualization of each and every step of a 2-stage page table walk in ARM v9 architecture"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "GPLv3" }
authors = [{ name = "Hemin Desai" }]

dependencies = [
    "rich>=13.0.0",      # Terminal visualization
    "pydantic>=2.0.0",   # Data validation and models
    "jinja2>=3.0.0",     # HTML template rendering
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
page-table-walker = "ptw_viz.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ptw_viz"]
